Fixed FAQ spacing

--- a/src/app/view/faq/faq.component.scss
+++ b/src/app/view/faq/faq.component.scss
@@ -13,6 +13,9 @@ h1{
   font-weight: 800;
   text-align: center;
   color: #000000;
+  position: relative;
+  top: 95px;
+  margin-bottom: 81px;
 }
 
 img{
